jgroup-refactoring: Moved client API into its own module and each of the client implementations as well. So far the integration test is not succeeding.