@@ -61,6 +61,11 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>de.mklinger.jgroups</groupId>
+			<artifactId>jgroups-http2-client-api</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
 			<groupId>org.jgroups</groupId>
 			<artifactId>jgroups</artifactId>
 			<version>4.0.0.Final</version>
@@ -200,10 +205,23 @@
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+				<version>3.1.0</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>test-jar</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+<!--
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-failsafe-plugin</artifactId>
 				<version>2.20.1</version>
 				<configuration>
-					<argLine>--add-modules jdk.incubator.httpclient</argLine>
+					<argLine>&#45;&#45;add-modules jdk.incubator.httpclient</argLine>
 					<redirectTestOutputToFile>true</redirectTestOutputToFile>
 				</configuration>
 				<executions>
@@ -215,6 +233,7 @@
 					</execution>
 				</executions>
 			</plugin>
+-->
 		</plugins>
 	</build>
 
